--- a/issFinacial/Views/Customers/Delete.cshtml
+++ b/issFinacial/Views/Customers/Delete.cshtml
@@ -97,13 +97,13 @@
                                 @Html.DisplayFor(model => model.siNo)
                             </dd>
 
-                            @*<dt>
-                                <label>Item Code</label>
+                            <dt>
+                                <label>Age</label>
                             </dt>
 
                             <dd>
-                                @Html.DisplayFor(model => model.customerNameTamil)
-                            </dd>*@
+                                @Html.DisplayFor(model => model.Age)
+                            </dd>
                             <dt>
                                 <label>Customer Name</label>
                             </dt>
@@ -111,13 +111,13 @@
                             <dd>
                                 @Html.DisplayFor(model => model.customerName)
                             </dd>
-                            @*<dt>
-                                <label>Customer Relation</label>
+                            <dt>
+                                <label>Father Name</label>
                             </dt>
 
                             <dd>
-                                @Html.DisplayFor(model => model.customerRelation)
-                            </dd>*@
+                                @Html.DisplayFor(model => model.FatherName)
+                            </dd>
 
                             @*<dt>
                                 @Html.DisplayNameFor(model => model.customerAddressTamil)
