--- a/issFinacial/Views/VehicleLoanEntries/Index.cshtml
+++ b/issFinacial/Views/VehicleLoanEntries/Index.cshtml
@@ -126,7 +126,7 @@
                         @Html.DisplayFor(modelItem => item.Customer.id)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.customerName.customerName)
+                        @Html.DisplayFor(modelItem => item.Customer.customerName)
                     </td>
 
                     <td>
