--- a/issFinacial/Views/AccountLedgers/Edit.cshtml
+++ b/issFinacial/Views/AccountLedgers/Edit.cshtml
@@ -84,6 +84,7 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
+                            <label>Account Ledger</label>
                             @Html.EditorFor(model => model.ledger, new { htmlAttributes = new { @class = "form-control", @placeholder = "Account Ledger" } })
                             @Html.ValidationMessageFor(model => model.ledger, "", new { @class = "text-danger" })
                         </div>
@@ -101,6 +102,7 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
+                            <label>Opening Balance</label>
                             @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control", @placeholder = "Opening Balance" } })
                             @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
                         </div>
@@ -109,6 +111,7 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
+                            <label>Type</label>
                             @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control", @placeholder = "Type" } })
                             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
                         </div>
