--- a/issFinacial/Views/Areas/Edit.cshtml
+++ b/issFinacial/Views/Areas/Edit.cshtml
@@ -83,6 +83,7 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
+                            <label>Area Name</label>
                             @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Area Name" } })
                             @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                         </div>
