--- a/issFinacial/Views/Brokers1/Edit.cshtml
+++ b/issFinacial/Views/Brokers1/Edit.cshtml
@@ -81,22 +81,23 @@
                     <div class="form-group">
 
                         <div class="col-md-10">
+                            <label>Name</label>
                             @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Name" } })
                             @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-
                         <div class="col-md-10">
+                            <label>Address</label>
                             @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", @placeholder = "Address" } })
                             @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-
                         <div class="col-md-10">
+                            <label>Cell Number</label>
                             @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Cell No" } })
                             @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
                         </div>
