--- a/issFinacial/Views/Installments/Create.cshtml
+++ b/issFinacial/Views/Installments/Create.cshtml
@@ -86,7 +86,7 @@
                                     @Html.ValidationMessageFor(model => model.loanNumber, "", new { @class = "text-danger" })
                                 </div>
 
-                                 <div class="form-group col-md-4">
+                                <div class="form-group col-md-4">
                                     @Html.EditorFor(model => model.loanAmount, new { htmlAttributes = new { @class = "form-control", @placeholder = "loanAmount" } })
                                     @Html.ValidationMessageFor(model => model.loanAmount, "", new { @class = "text-danger" })
                                 </div>
@@ -101,6 +101,11 @@
                                 <div class="form-group col-md-4">
                                     @Html.EditorFor(model => model.dueStatus, new { htmlAttributes = new { @class = "form-control", @placeholder = "Due Status" } })
                                     @Html.ValidationMessageFor(model => model.dueStatus, "", new { @class = "text-danger" })
+                                </div>
+
+                                <div class="form-group col-md-4">
+                                    @Html.EditorFor(model => model.phoneNumbers, new { htmlAttributes = new { @class = "form-control", @placeholder = "phoneNumbers" } })
+                                    @Html.ValidationMessageFor(model => model.phoneNumbers, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="row">
@@ -132,10 +137,10 @@
                     </div>
                 </div>
             </div>
-        }
 
+        }
     </div>
-                </div>
+</div>
 
 
 
