--- a/issFinacial/Views/Installments/Edit.cshtml
+++ b/issFinacial/Views/Installments/Edit.cshtml
@@ -93,7 +93,10 @@
                     @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            <div class="form-group col-md-4">
+                @Html.EditorFor(model => model.phoneNumbers, new { htmlAttributes = new { @class = "form-control", @placeholder = "phoneNumbers" } })
+                @Html.ValidationMessageFor(model => model.phoneNumbers, "", new { @class = "text-danger" })
+            </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.dueStatus, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
