--- a/issFinacial/Views/InsuranceCompanies/Edit.cshtml
+++ b/issFinacial/Views/InsuranceCompanies/Edit.cshtml
@@ -79,10 +79,9 @@
                     </div>
                 </div>
                 <div class="form-horizontal">
-
                     <div class="form-group">
-
                         <div class="col-md-10">
+                            <label>Company Name</label>
                             @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Company Name" } })
                             @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                         </div>
