--- a/issFinacial/Views/ReceiptEntries/Edit.cshtml
+++ b/issFinacial/Views/ReceiptEntries/Edit.cshtml
@@ -77,18 +77,16 @@
                     </div>
                 </div>
                 <div class="form-horizontal">
-
-
-
-
                     <div class="form-group">
                         <div class="form-group col-md-4">
+                            <label>Ledger Id</label>
                             @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ledger Id" } })
                             @Html.ValidationMessageFor(model => model.No, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-group col-md-4">
+                            <label>Ledger Name</label>
                             @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ledger Name" } })
                             @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                         </div>
@@ -96,22 +94,24 @@
                     <div class="form-group col-md-4">
                         <label>Date</label>
                         @Html.TextBoxFor(m => m.date, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
-
                     </div>
                     <div class="form-group">
                         <div class="form-group col-md-4">
+                            <label>Payment Type</label>
                             @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control", @placeholder = "Payment Type" } })
                             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-group col-md-4">
+                            <label>Description</label>
                             @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Description" } })
                             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="form-group col-md-4">
+                            <label>Amount</label>
                             @Html.EditorFor(model => model.amount, new { htmlAttributes = new { @class = "form-control", @placeholder = "Amount" } })
                             @Html.ValidationMessageFor(model => model.amount, "", new { @class = "text-danger" })
                         </div>
