--- a/issFinacial/Views/Shared/_Layout.cshtml
+++ b/issFinacial/Views/Shared/_Layout.cshtml
@@ -323,8 +323,8 @@
                             <ul class="nav nav-group-sub" data-submenu-title="Themes">
 
                                 <li class="nav-item"><a href="~/VehicleLoanEntries/Index" class="nav-link">Vehicle Loan</a></li>
-                                <li class="nav-item"><a href="~/Installments/Index" class="nav-link">Installments</a></li>
-                                <li class="nav-item"><a href="~/Report/InstallmentSchedule" class="nav-link">Vechicle Loan Collections</a></li>
+                                <li class="nav-item"><a href="~/Report/InstallmentSchedule" class="nav-link">Installments</a></li>
+                                <li class="nav-item"><a href="~/VechicleLoanCollections/Index" class="nav-link">Vechicle Loan Collections</a></li>
                             </ul>
                         </li>
                         <li class="nav-item nav-item-submenu">
