--- a/issFinacial/Views/Vehicles/Edit.cshtml
+++ b/issFinacial/Views/Vehicles/Edit.cshtml
@@ -83,6 +83,7 @@
                 <div class="form-group">
 
                     <div class="col-md-10">
+                        <label>Vechicle Name</label>
                         @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Vehicle Name" } })
                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                     </div>
